修改06-事件监听/03-v-on的修饰符 @keyup.enter监听键盘代码有误 #11

--- a/06-事件监听/03-v-on的修饰符.html
+++ b/06-事件监听/03-v-on的修饰符.html
@@ -17,7 +17,7 @@
       <button type="submit" @click.prevent="submitClick">提交</button>
     </form>
     <!--3. 监听键盘的事件 -->
-    <input type="text" @click.enter="keyup">
+    <input type="text" @keyup.enter="keyup">
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
